RESOLVED FIXED108502
Lack of a log level string should not obliterate compiled in logging channel state
https://bugs.webkit.org/show_bug.cgi?id=108502
Summary Lack of a log level string should not obliterate compiled in logging channel ...
Brady Eidson
Reported 2013-01-31 10:57:14 PST
Lack of a log level string should not obliterate compiled in logging channel state
Attachments
Patch v1 (1.58 KB, patch)
2013-01-31 10:58 PST, Brady Eidson
sam: review+
ap: commit-queue-
Brady Eidson
Comment 1 2013-01-31 10:58:40 PST
Created attachment 185814 [details] Patch v1
Alexey Proskuryakov
Comment 2 2013-01-31 11:02:38 PST
Comment on attachment 185814 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=185814&action=review rs=me if you do this consistently everywhere, not just in WebKit2. WebCore already has this behavior, so this leaves us with WebKit1. But WebCore's code looks different, so you can consider replacing one of the versions with a copy/paste. > Source/WebKit2/ChangeLog:9 > + (WebKit::initializeLogChannel): If there's no log level string, level the channel state alone. Autocorrection: leave.
Brady Eidson
Comment 3 2013-01-31 11:09:41 PST
Note You need to log in before you can comment on or make changes to this bug.