Lack of a log level string should not obliterate compiled in logging channel state. https://bugs.webkit.org/show_bug.cgi?id=108502

Reviewed by Alexey Proskuryakov and Sam Weinig.

Source/WebKit/mac:

* Misc/WebKitLogging.m: If there's no log level string, leave the channel state alone.

Source/WebKit2:

* Platform/mac/Logging.mac.mm:
(WebKit::initializeLogChannel): If there's no log level string, leave the channel state alone.

Canonical link: https://commits.webkit.org/126717@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141447 268f45cc-cd09-0410-ab3c-d52691b4dbfc