Source/WebKit2/Platform/mac/Logging.mac.mm
@@ -32,11 +32,13 @@ namespace WebKit {
 
 void initializeLogChannel(WTFLogChannel* channel)
 {
-    channel->state = WTFLogChannelOff;
+    // If there is no log level string from the user defaults then don't change the logging channel at all.
     NSString *logLevelString = [[NSUserDefaults standardUserDefaults] objectForKey:[NSString stringWithUTF8String:channel->defaultName]];
     if (!logLevelString)
         return;
-        
+
+    channel->state = WTFLogChannelOff;
+
     unsigned logLevel;
     if (![[NSScanner scannerWithString:logLevelString] scanHexInt:&logLevel])
         NSLog(@"unable to parse hex value for %s (%@), logging is off", channel->defaultName, logLevelString);
